<resources>
    <string name="app_name">androidAssignment1</string>
    <string name="pw">비밀번호</string>
    <string name="github_id">깃허브 아이디</string>
    <string name="hint_github_id">깃허브 아이디를 입력해주세요</string>
    <string name="hint_pw">비밀번호를 입력해주세요</string>
    <string name="login">로그인</string>
    <string name="question_account">계정이 없으신가요?</string>
    <string name="signup">회원가입</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="input_id">아이디를 입력해주세요</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="announcement_ready">준비중입니다</string>
    <string name="github">Github</string>
    <string name="name_hyuna">Hyuna Kim</string>
    <string name="id_akimcse">akimcse</string>
    <string name="introduce_hyuna">초보 개발자 김현아</string>
    <string name="follower_list">팔로워 목록</string>
    <string name="repository_list">레포지토리 목록</string>
    <string name="self_info">자기소개</string>


</resources>